--- a/style.css
+++ b/style.css
@@ -8,3 +8,12 @@
     width: 40px;
     height: 40px;
 }
+
+#pixel-board {
+    margin-top: 10px;
+    border: red solid 1px;
+}
+
+.pixel {
+    background-color: white;
+}
