--- a/style.css
+++ b/style.css
@@ -12,8 +12,18 @@
 #pixel-board {
     margin-top: 10px;
     border: red solid 1px;
+    padding: 10px;
+
+}
+
+.line {
+    height: 40px;
 }
 
 .pixel {
+    display: inline-block;
     background-color: white;
+    width: 40px;
+    height: 40px;
+    border: black solid 1px;
 }
